src/app/styles/index.postcss.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.fit_screen {
  /* 100% screen size, minus header */
  min-height: calc(100vh - 68px);
}

/* Hack to scroll to the right element on target */
:target::before {
  content: '';
  display: block;
  height: 75px;
  margin-top: -75px;
}

article h2 {
  @apply text-sc-gray-1 text-sc-title-2 font-bold mb-4 mt-6;
}

article h3 {
  @apply text-sc-gray-1 text-sc-title-3 font-bold mb-3 mt-5;
}

article h4 {
  @apply text-sc-gray-1 text-sc-title-4 font-bold mb-3 mt-5;
}

article h5 {
  @apply text-sc-gray-1 text-sc-title-5 font-bold mb-3 mt-5;
}

article p {
  @apply text-sc-gray-2 mb-2;
}

article li {
  @apply text-sc-text-3
}

article ul {
  @apply my-2
}

article a {
  @apply underline text-sc-gray-1 hover:text-sc-blue-1
}

article div.highlighter-rouge {
  @apply max-w-xs lg:max-w-none
}

article pre.highlight {
  font-size: 14px;
  line-height: 18px;
  @apply p-8 rounded-lg text-sc-gray-3 font-mono shadow-lg
}

article pre {
  @apply my-4;
}

article code.language-plaintext {
  @apply bg-sc-gray-3 text-sc-gray-2 font-mono px-2 py-1 rounded;
}

div.toc ul ul {
  @apply ml-4;
}

div.toc li {
  @apply text-sc-text-2 py-1;
}

article hr {
  @apply border-sc-gray-3;
}

article ul {
  list-style: none;
}
article ul:not(.list-unstyled) > li {
  position: relative;
  padding-left: 1.5em;
}
article ul:not(.list-unstyled) > li:before {
  content: "";
  position: absolute;
  border-radius: 50%;
  width: 0.4em;
  height: 0.4em;
  top: 1em;
  left: 0.25em;
  @apply bg-sc-blue-1;
}

article ol {
  list-style: list-outside;
}

article ol li {
  @apply ml-8 pl-2.5
}

article ol > li::marker {
  color: #183BEE;
  font-weight: bold;
}

article aside.note {
  @apply border bg-sc-purple-3 text-sc-purple-1 p-6 border-sc-purple-1 my-8 flex gap-4
}

article aside svg {
  @apply flex-none
}

article aside.note a {
  @apply text-sc-purple-1 font-bold
}

article aside.note code.language-plaintext {
  @apply bg-sc-purple-2 text-sc-purple-1;
}

article aside.warning {
  @apply border bg-sc-red-3 text-sc-red-1 p-6 border-sc-red-1 my-8 flex gap-4
}

article aside.warning a {
  @apply text-sc-red-1 font-bold
}

article aside.warning code.language-plaintext {
  @apply bg-sc-red-2 text-sc-red-1;
}

article table {
  @apply border border-sc-gray-3 table-auto w-full mb-4 text-sc-text-4 text-sc-gray-1
}

article table th {
  @apply pt-5 pb-3 bg-sc-gray-5 text-left px-5 font-bold uppercase text-sc-title-7
}

article table td {
  @apply py-5 px-5
}

article tr:nth-child(odd) {
  @apply bg-sc-gray-4
}

.changelog input:checked ~ label svg {
  transform: rotate(180deg);
}

.changelog input:checked + label + div {
  display: block;
}

nav input:checked ~ label svg {
  transform: rotate(90deg);
}

nav input:checked + label + hr + div {
  display: block;
}

svg {
  max-width: 100%;
  max-height: 100%;
}
.DocSearch {
  --docsearch-modal-background: #F8F9FF;
  --docsearch-searchbox-background: #FFFFFF;
  --docsearch-text-color: #1F2933;
  --docsearch-primary-color: #183BEE;
  --docsearch-logo-color: #183BEE;
  --docsearch-highlight-color: var(--docsearch-primary-color);
  --docsearch-searchbox-shadow: inset 0 0 0 1px var(--docsearch-primary-color);
}
.DocSearch.DocSearch-Button {
  @apply w-full rounded-md text-sc-gray-1 m-0 px-6 h-14;
  border: 1px solid #D2D9F9;
}
.DocSearch .DocSearch-Search-Icon {
  @apply text-sc-blue-1 flex-none;
}
.DocSearch .DocSearch-Button-Placeholder {
  @apply text-sc-gray-2 pl-4 font-normal;
}

#breadcrumb a {
  @apply text-sc-gray-2 no-underline;
}

#breadcrumb a:hover {
  @apply text-sc-gray-1;
}

.highlight { overflow-x: auto; }
.highlight pre { background-color: #060C20; }
.highlight .hll { background-color: #060C20; }
.highlight .c { color: #75715e } /* Comment */
.highlight .err { color: #960050; background-color: #1e0010 } /* Error */
.highlight .k { color: #66d9ef } /* Keyword */
.highlight .l { color: #ae81ff } /* Literal */
.highlight .n { color: #f8f8f2 } /* Name */
.highlight .o { color: #f92672 } /* Operator */
.highlight .p { color: #f8f8f2 } /* Punctuation */
.highlight .cm { color: #75715e } /* Comment.Multiline */
.highlight .cp { color: #75715e } /* Comment.Preproc */
.highlight .c1 { color: #75715e } /* Comment.Single */
.highlight .cs { color: #75715e } /* Comment.Special */
.highlight .ge { font-style: italic } /* Generic.Emph */
.highlight .gs { font-weight: bold } /* Generic.Strong */
.highlight .kc { color: #66d9ef } /* Keyword.Constant */
.highlight .kd { color: #66d9ef } /* Keyword.Declaration */
.highlight .kn { color: #f92672 } /* Keyword.Namespace */
.highlight .kp { color: #66d9ef } /* Keyword.Pseudo */
.highlight .kr { color: #66d9ef } /* Keyword.Reserved */
.highlight .kt { color: #66d9ef } /* Keyword.Type */
.highlight .ld { color: #e6db74 } /* Literal.Date */
.highlight .m { color: #ae81ff } /* Literal.Number */
.highlight .s { color: #e6db74 } /* Literal.String */
.highlight .na { color: #a6e22e } /* Name.Attribute */
.highlight .nb { color: #f8f8f2 } /* Name.Builtin */
.highlight .nc { color: #a6e22e } /* Name.Class */
.highlight .no { color: #66d9ef } /* Name.Constant */
.highlight .nd { color: #a6e22e } /* Name.Decorator */
.highlight .ni { color: #f8f8f2 } /* Name.Entity */
.highlight .ne { color: #a6e22e } /* Name.Exception */
.highlight .nf { color: #a6e22e } /* Name.Function */
.highlight .nl { color: #f8f8f2 } /* Name.Label */
.highlight .nn { color: #f8f8f2 } /* Name.Namespace */
.highlight .nx { color: #a6e22e } /* Name.Other */
.highlight .py { color: #f8f8f2 } /* Name.Property */
.highlight .nt { color: #f92672 } /* Name.Tag */
.highlight .nv { color: #f8f8f2 } /* Name.Variable */
.highlight .ow { color: #f92672 } /* Operator.Word */
.highlight .w { color: #f8f8f2 } /* Text.Whitespace */
.highlight .mf { color: #ae81ff } /* Literal.Number.Float */
.highlight .mh { color: #ae81ff } /* Literal.Number.Hex */
.highlight .mi { color: #ae81ff } /* Literal.Number.Integer */
.highlight .mo { color: #ae81ff } /* Literal.Number.Oct */
.highlight .sb { color: #e6db74 } /* Literal.String.Backtick */
.highlight .sc { color: #e6db74 } /* Literal.String.Char */
.highlight .sd { color: #e6db74 } /* Literal.String.Doc */
.highlight .s2 { color: #e6db74 } /* Literal.String.Double */
.highlight .se { color: #ae81ff } /* Literal.String.Escape */
.highlight .sh { color: #e6db74 } /* Literal.String.Heredoc */
.highlight .si { color: #e6db74 } /* Literal.String.Interpol */
.highlight .sx { color: #e6db74 } /* Literal.String.Other */
.highlight .sr { color: #e6db74 } /* Literal.String.Regex */
.highlight .s1 { color: #e6db74 } /* Literal.String.Single */
.highlight .ss { color: #e6db74 } /* Literal.String.Symbol */
.highlight .bp { color: #f8f8f2 } /* Name.Builtin.Pseudo */
.highlight .vc { color: #f8f8f2 } /* Name.Variable.Class */
.highlight .vg { color: #f8f8f2 } /* Name.Variable.Global */
.highlight .vi { color: #f8f8f2 } /* Name.Variable.Instance */
.highlight .il { color: #ae81ff } /* Literal.Number.Integer.Long */

.highlight .gh { } /* Generic Heading & Diff Header */
.highlight .gu { color: #75715e; } /* Generic.Subheading & Diff Unified/Comment? */
.highlight .gd { color: #f92672; } /* Generic.Deleted & Diff Deleted */
.highlight .gi { color: #a6e22e; } /* Generic.Inserted & Diff Inserted */

